unpackaged/objects/A_DX_Object__c.object
<CustomObject>
	<fields>
		<fullName>A_New_Text_Field__c</fullName>
		<description>My Description</description>
		<externalId>true</externalId>
		<inlineHelpText>My Help Text</inlineHelpText>
		<label>A New Text Field</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>newone__c</fullName>
		<label>newone</label>
		<length>200</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>A_new_Date_Field__c</fullName>
		<label>A new Date Field</label>
		<type>Date</type>
	</fields>
	<label>A DX Object</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>{0}</displayFormat>
		<label>A DX Object Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>A DX Objects</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>